--- a/land2/stylesheets/styles.css
+++ b/land2/stylesheets/styles.css
@@ -32,8 +32,12 @@ text-align: center;
 /*background-image: url('http://www.boefly.com/blog/wp-content/uploads/SmallBusinessSecurity.jpeg');*/
 /*background-image: url('http://i.huffpost.com/gen/1410150/thumbs/o-SMALL-BUSINESS-facebook.jpg');*/
 background-image: url('http://www.theneworleanstribune.com/main/wp-content/uploads/2014/04/Brand-Discovery-1024x734.jpg');
+/*background-image: url("../images/blackbusinessowner.jpg");*/
 background-repeat: no-repeat;
 background-size: cover;
+
+
+
 }
 
 .header-info {
