--- a/land1/stylesheets/styles.css
+++ b/land1/stylesheets/styles.css
@@ -48,7 +48,12 @@ background-size: cover;
 	position:absolute;
 }
 
-#about, #how-it-works, #testimonials, #container {
+#testimonials {
+padding: 50px 0 50px 0;
+height: 450px;
+}
+
+#about, #how-it-works, #container {
 	padding: 50px 0 50px 0;
 	height: 700px;
 }
@@ -76,6 +81,12 @@ background-size: cover;
 #press img {
 	margin: 10px;
 }
+
+#press i {
+
+	margin: 1em;
+}
+
 
 #footer {
 	/*background-color: #2b3442;*/
